<resources>
    <string name="app_name">Clínica de Estética Nice Face</string>
    <string name="title_activity_tela_menu">ActivityTelaMenu</string>
    <string name="nav_header_title">Nice Face</string>
    <string name="nav_header_subtitle">nice.face@niceface.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_minhas_sessoes">Minhas Sessões</string>
    <string name="menu_meus_dados">Meus Dados</string>
    <string name="menu_agendar">Agendar</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_maps">Map</string>

    <string name="agenda_spinner">Procedimentos</string>
    <string-array name="procedimentos">
        <item>Procedimentos</item>
        <item>Botox Facial</item>
        <item>Depilação Laser</item>
        <item>Criolipólise</item>
        <item>Drenagem Linfática</item>
        <item>Peeling</item>
        <item>Carboxiterapia</item>
        <item>Radiofrequência</item>
        <item>Lipocavitação</item>
    </string-array>
    <!--       // https://www.youtube.com/watch?v=on_OrrX7Nw4&list=RDQMez8RvJZfW9A&start_radio=1-->
</resources>